--- a/vuejs-practice/package.json
+++ b/vuejs-practice/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
